--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/src/assets/portfolio.png">
+    <!-- <link rel="shortcut icon" href="icon.ico" > -->
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
