--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/src/assets/portfolio.png">
+    <link rel="icon" href="/src/assets/logic.png">
     <!-- <link rel="shortcut icon" href="icon.ico" > -->
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet" />
     
-    <title>NadiDuno Portf</title>
+    <title>Curso de Lógica</title>
   </head>
   <body>
     <div id="root"></div>
