--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-Br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/assets/logic.png">
